# reggie

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  LICENSE  POTENTIAL_IMPROVEMENTS.md  QUICKSTART.md  RAG_PLAN.md  README.md  SETUP.md  STATISTICAL_QUERY_TOOL_NOTES.md  TESTING_PLAN.md  VISUALIZATION_DEV_PLAN.md  db-backup.sh  db-login.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: CLAUDE.md
documentation/: phase1-document-profiles.md  phase2-dual-query-generation.md
evals/: README.md  __init__.py  evaluators.py  run_evaluation.py
reggie/: __init__.py  __main__.py  config.py  exceptions.py  logging_config.py  prompts.py
reggie/agent/: __init__.py  chains.py  discussion.py  evaluation_dataset.py  evaluators.py  rag_graph.py  run_evaluation.py  status.py  tools.py  visualizations.py
reggie/api/: __init__.py  client.py
reggie/cli/: __init__.py  cost_renderer.py  main.py  progress.py  streaming_progress.py
reggie/db/: __init__.py  connection.py  exceptions.py  repository.py  schema.sql  unit_of_work.py
reggie/models/: __init__.py  agent.py  comment.py  cost.py  document.py  stats.py  visualization.py
reggie/pipeline/: __init__.py  categorizer.py  csv_importer.py  embedder.py  loader.py  orchestrator.py  processor.py  stages.py  streamer.py
reggie/utils/: __init__.py  cost_tracker.py  error_collector.py
scripts/: comment_sample_analysis.py  validate_subcategories.py
tests/: README.md  conftest.py  requirements-test.txt
tests/cli/: test_commands.py
tests/integration/: test_api_client.py  (+2 more)
(+23 files in other folders)
